Homework 1 (Lesson 4)/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ovgusev-otus-arch-1-service
spec:
  selector:
    app: actuator-app
  ports:
    - protocol: TCP
      port: 9000
      targetPort: web
  type: NodePort
