Homework 1 (Lesson 4)/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ovgusev-otus-arch-1-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /otusapp/ovgusev($|/)(.*)
            backend:
              serviceName: ovgusev-otus-arch-1-service
              servicePort: 9000
